--- a/exercises-html.html
+++ b/exercises-html.html
@@ -21,6 +21,17 @@
     height: 36px;
     width: 200px;
     border-radius: 18px;
+    cursor: pointer;
+    transition: background-color 0.15s,
+      opacity 0.15s;
+  }
+
+  .carrinho:hover {
+    background-color: rgb(211, 179, 22);
+  }
+
+  .carrinho:active {
+    opacity: 0.6;
   }
 
   .comprar-agora {
@@ -30,6 +41,17 @@
     height: 36px;
     width: 200px;
     border-radius: 18px;
+    cursor: pointer;
+    transition: background-color 0.15s,
+      opacity 0.15s;
+  }
+
+  .comprar-agora:hover {
+    background-color: rgb(214, 139, 26);
+  }
+
+  .comprar-agora:active {
+    opacity: 0.6;
   }
 </style>
 
