Pastas dedicadas, arquivo css isolado, iniciação projeto clone youtube

--- a/introducao-html/website.html
+++ b/introducao-html/website.html
@@ -1,6 +1,12 @@
-<p> 
+<!DOCTYPE html>
+<html> 
+  <head>
+    <title>Primeiro Site</title>
+  </head>
+  <body>
+    <p> 
   paragrafo de texto
-</p>
+    </p>
 
 <button>
   Hello
@@ -13,3 +19,9 @@
 <!-- href é um atributo HTML que modifica como um elemento se comporta -->
 <!-- target serve para ver se o atributo abre na mesma página do link ou em uma pagina diferente, se estiver sem target ele abre na mesma página da aplicação-->
 <!-- Espaços e linhas extras são ignorados no HTML-->
+  </body>
+</html>
+
+
+
+
