Apliquei conceitos CSS Display Property e fiz as lições 8

--- a/youtube.html
+++ b/youtube.html
@@ -7,7 +7,23 @@
     <link rel="stylesheet" href="youtube.css">
   </head>
   <body>
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+
     <input class="barra-de-pesquisa" type="text" placeholder="Pesquisar">
+
+
+    <img class="thumbnail" src="thumbnails/thumbnail-1.webp"> <!-- Inline block element, que só pega o espaço que o elemento precisa-->
+
+    <p class="titulo-video"> <!-- Elemento de bloco, que vai ate o final da linha-->
+      Talking Tech and AI with Google CEO Sundar Pichai! 
+    </p>
+
+    <p class="autor-video">
+      Marques Brownlee <!-- Inline element, que só aparece em algum texto como o <strong> <strong/>-->
+    </p>
+      
+    <p class="status-video">
+      3.4M views &#183 6 months ago 
+    </p>
+
   </body>
 </html>
