--- a/exercises/box-model.html
+++ b/exercises/box-model.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exercicios de modelo de caixa</title>
-  <link rel="stylesheet" href="styles/exercises-box-model.css">
+  <link rel="stylesheet" href="styles/box-model.css">
 </head>
 <body>
   <!-- Paginação --> 
