--- a/exercises/buttons.html
+++ b/exercises/buttons.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Buttons for different Websites</title>
-  <link rel="stylesheet" href="styles/exercises-buttons.css">
+  <link rel="stylesheet" href="styles/buttons.css">
 </head>
 <body>
   
