--- a/exercises/index.html
+++ b/exercises/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simulador de E-commerce</title>
-  <link rel="stylesheet" href="styles/exercises-html.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <a href="https://www.kabum.com.br" target="_blank">
