Add divs & exercicios feitos (Bug na barra-adicionar não se alinha)

--- a/exercises/lesson8.html
+++ b/exercises/lesson8.html
@@ -24,5 +24,26 @@
 
     <img class="google" src="image/Google.png" alt="Google-Logo">
     <input class="pesquisa" type="text" placeholder="Search Google or type a URL">
+
+    <!-- -->
+
+    <input class="primeiro-nome" type="text" placeholder="First name">
+    <input class="ultimo-nome" type="text" placeholder="last name">
+    <input class="email2" type="text" placeholder="Email">
+    <button class="inscreva-se">
+      Sign Up
+    </button>
+
+    <!-- -->
+
+    <p class="paragrafo">Request a ride now</p>
+    <input class="location-user" type="text" placeholder="Enter pickup location">
+    <input class="destination-user" type="text" placeholder="Enter destination">
+    <button class="pedir">
+      Request Now
+    </button>
+    <button class="agendar">
+      Schedule for later
+    </button>
   </body>
 </html>
