--- a/exercises/lesson9.html
+++ b/exercises/lesson9.html
@@ -54,18 +54,31 @@
       </div>
 
       <div class="perfil">
-          <img class="salsicha2" src="image/salsicha1.png" alt="Cachorro Salsicha 3">
-          <p class="usuario"> Oliver</p>
-          <p class="conexoes"> 2 mutual friends</p>
+          <img class="bebop" src="image/Bebop.png" alt="Cachorro Salsicha 3">
+          <p class="usuario">Mimi</p>
+          <p class="conexoes"> 3 mutual friends</p>
           <button class="adicionar">Add friend</button>
       </div>
 
       <div class="perfil">
-          <img class="salsicha2" src="image/salsicha1.png" alt="Cachorro Salsicha 3">
-          <p class="usuario"> Oliver</p>
-          <p class="conexoes"> 2 mutual friends</p>
+          <img class="caramelo" src="image/Caramelo.jpg" alt="Cachorro Salsicha 3">
+          <p class="usuario">Rex</p>
+          <p class="conexoes"> 4 mutual friends</p>
           <button class="adicionar">Add friend</button>
       </div>
-      
      </div>
+
+     <!-- -->
+     <div class="main">
+      <div>
+          <img class="google" src="image/Google.png" alt="Google-Logo">
+      </div>
+      <div>
+          <input class="pesquisa" type="text" placeholder="Search Google or type a URL">
+      </div>
+      <div>
+        <button class="button-google">Google Search</button>
+        <button class="button-google">I'm Feeling Lucky</button>
+      </div>
+    </div>
 </body>
