add conceito de position e exercicios 14 resolvidos.

--- a/exercises/lesson13-2.html
+++ b/exercises/lesson13-2.html
@@ -1,27 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nested Flexbox pratice</title>
-    <link rel="stylesheet" href="styles/lesson13-2.css">
-  </head>
-  <body>
-    <div class="main-container">
-      <div class="label-principal">
-        <p>ALL INBOXES</p>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nested Flexbox pratice</title>
+  <link rel="stylesheet" href="styles/lesson13-2.css">
+</head>
+
+<body>
+  <div class="main-container">
+    <div class="label-principal">
+      <p class="inboxes">ALL INBOXES</p>
+      <div>
+      </div>
+      <div class="todos-emails">
         <div class="label-secundaria">
-          <img class="foto-usuario" src="image/Bebop.png">
           <div class="info-label">
-            <p> Chewy Promotions</p>
-            <p> Biggest sales of the year!</p>
-            <p> Hey there! We're writing to tell you about our...</p>
+            <img class="foto-usuario" src="image/Bebop.png">
           </div>
           <div class="label-terciaria">
-            <p class="hora"> 4:58 PM</p>
+            <div class="info1-label">
+              <p class="email"> Chewy Promotions</p>
+              <p class="hora"> 4:58 PM</p>
+            </div>
+            <div class="info2-label">
+              <p class="titulo"> Biggest sales of the year!</p>
+              <p class="assunto"> Hey there! We're writing to tell you about our...
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+
+<!-- -->
+
+  <div class="main-container">
+    <div class="label-principal">
+      <p class="inboxes">ALL INBOXES</p>
+      <div>
+      </div>
+      <div class="todos-emails">
+        <div class="label-secundaria">
+          <div class="info-label">
+            <img class="foto-usuario" src="image/Bebop.png">
+          </div>
+          <div class="label-terciaria">
+            <div class="info1-label">
+              <p class="email"> Chewy Promotions</p>
+              <p class="hora"> 4:58 PM</p>
+            </div>
+            <div class="info2-label">
+              <p class="titulo"> Biggest sales of the year!</p>
+              <p class="assunto"> Hey there! We're writing to tell you about our...
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="label-secundaria">
+          <div class="info-label">
+            <img class="foto-usuario" src="image/salsicha1.png">
+          </div>
+          <div class="label-terciaria">
+            <div class="info1-label">
+              <p class="email"> Best Buy</p>
+              <p class="hora"> 12:32 PM</p>
+            </div>
+            <div class="info2-label">
+              <p class="titulo"> Your Best Buy eReceipt</p>
+              <p class="assunto"> Thank you for shooping at Best Buy, here is...
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="label-secundaria">
+          <div class="info-label">
+            <img class="foto-usuario" src="image/Caramelo.jpg">
+          </div>
+          <div class="label-terciaria">
+            <div class="info1-label">
+              <p class="email"> Netflix</p>
+              <p class="hora"> 9:00 AM</p>
+            </div>
+            <div class="info2-label">
+              <p class="titulo"> Here's what's coming soon to Netflix</p>
+              <p class="assunto"> Brand new movies and shows, old favorites...
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
