--- a/youtube-clone/index.html
+++ b/youtube-clone/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="styles\main.css">
   <link rel="stylesheet" href="styles\header.css">
   <link rel="stylesheet" href="styles\video.css">
+  <link rel="stylesheet" href="styles/sidebar.css">
   
   
 </head>
@@ -41,6 +42,10 @@
       <img class="icone-notificacoes" src="icons/notifications.svg">
       <img class="icone-meu-canal" src="canais/my-channel.jpeg">
     </div>
+  </div>
+
+  <div class="sidebar">
+    sidebar
   </div>
 
   <div class="grid-video">
